manager/manifests/operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: operator
  namespace: default
  labels:
    workloadID: operator
spec:
  replicas: 1
  selector:
    matchLabels:
      workloadID: operator
  template:
    metadata:
      labels:
        workloadID: operator
    spec:
      serviceAccountName: operator
      containers:
        - name: operator
          image: $CORTEX_IMAGE_OPERATOR
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 200m
              memory: 128Mi
            limits:
              cpu: 2000m
              memory: 1024Mi
          ports:
            - containerPort: 8888
          volumeMounts:
            - name: cluster-config
              mountPath: /configs/cluster
            - name: docker-client
              mountPath: /var/run/docker.sock
      volumes:
        - name: cluster-config
          configMap:
            name: cluster-config
        - name: docker-client
          hostPath:
            path: /var/run/docker.sock
            type: Socket

---
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: operator
spec:
  selector:
    workloadID: operator
  ports:
    - port: 8888
      name: http

---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: operator-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway-operator
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*"
      tls:
        mode: SIMPLE
        serverCertificate: /etc/istio/customgateway-certs/tls.crt
        privateKey: /etc/istio/customgateway-certs/tls.key

---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: operator
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - operator-gateway
  http:
    - route:
        - destination:
            host: operator
            port:
              number: 8888
